fixed collapsing on devices at widths 720px and greater

--- a/day-3/src/RoomInfo/RoomInfo.css
+++ b/day-3/src/RoomInfo/RoomInfo.css
@@ -9,6 +9,7 @@
     border-radius: 4px;
     transition: box-shadow 1s;
     display: inline-block;
+    min-width: 18.5rem;
 }
 .room__shadow:hover {
     box-shadow: 1rem 1rem 1rem rgba(0,0,0,0.5);
